# Hyperterm

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  FONT_SELECTOR_USAGE.md  FONT_SETUP.md  GITHUB_SETUP.md  IMPLEMENTATION_NOTES.md  LICENSE  QUICK_BUILD.md  QUICK_STATUS.txt  README.md  REMAINING_WORK.md  RUN_DEBUG.md  STATUS.md  VERTEX_BUFFER_IMPLEMENTATION.md  build_vulkan_test.sh  hyperterm.sh  setup_shaders.sh  vulkan_test.cpp
fonts/: README.md
shaders/: background.frag  text.vert
src/: application.cpp  application.hpp  main.cpp
src/renderer/: font_renderer.cpp  font_renderer.hpp  image_loader.cpp  image_loader.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
src/settings/: settings.cpp  settings.hpp  settings_ui.cpp  settings_ui.hpp
src/terminal/: terminal_manager.cpp  terminal_manager.hpp  terminal_session.cpp  terminal_session.hpp
src/ui/: menu_bar.cpp  menu_bar.hpp  pane.hpp  pane_manager.cpp  pane_manager.hpp  tab_manager.cpp  tab_manager.hpp  window_tiler.cpp  window_tiler.hpp
tests/: CMakeLists.txt  settings_test.cpp
